<resources>
    <string name="app_name">MvdM NOVI</string>
    <string name="img_photo_description">Foto van NOVI medewerkers.</string>
    <string name="te_bewerken_foto">Te bewerken foto.</string>
    <string name="share_photo">Share Photo</string>
    <string name="edit_photo">Edit photo</string>
    <string name="nieuwe_sticker_laden">Nieuwe sticker laden</string>
    <string name="welcome">Welkom in de Medewerker van de maand App!</string>
    <string name="available">Beschikbare foto\'s:</string>
    <string name="take_photo">Foto maken</string>
    <string name="name">Naam:</string>
    <string name="date">Datum:</string>
    <string name="employee_of_the_month">Medewerker van de maand </string>
    <string name="photo_name">Photo name</string>
    <string name="expand_card">Kaart uitvouwen</string>
    <string name="collapse_card">Kaart samenvouwen</string>
    <string name="enter_employee_name">Wat is de naam van de medewerker van de maand?</string>
    <string name="hint_employee_name">Karel Janssen</string>
    <string name="sticker_description">Sticker voor op een foto</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="home">Home</string>
    <string name="gallery">Galerij</string>
    <string name="sticker">Sticker</string>
    <string name="text">Tekst</string>
    <string name="save">Opslaan</string>
    <string name="delete_photo">Foto verwijderen</string>
    <string name="edit_this_photo">Foto bewerken</string>
    <string name="load_photo">Foto laden</string>
    <string name="expand_cards">Alle kaarten uitvouwen</string>
    <string name="collapse_cards">Alle kaarten samenvouwen</string>
    <string name="collapse_description">Alle kaarten samenvouwen om minder details te zien.</string>
    <string name="settings_description">Ga naar instellingen.</string>
    <string name="settings">Instellingen</string>
    <string name="take_photo_description">Nieuwe foto maken.</string>
    <string name="load_photo_description">Een foto laden uit het geheugen.</string>
    <string name="expand_description">Kaarten uitvouwen om alle meer gegevens te zien.</string>
    <string name="contextual_delete">Geselecteerde foto\'s verwijderen</string>
    <string name="contextual_edit">Geselecteerde foto bewerken</string>
    <string name="contextual_share">Geselecteerde foto\'s delen</string>
    <string name="home_description">Ga naar de homepagina.</string>
    <string name="gallery_description">Ga naar de galerij pagina.</string>
    <string name="sticker_icon_description">Sticker kiezen om toe te voegen aan de afbeelding.</string>
    <string name="text_icon_description">Medewerker van de maand tekst printen.</string>
    <string name="save_icon_description">Afbeelding opslaan.</string>
    <string name="sticker_load_description">Nieuwe sticker laden uit geheugen.</string>
    <string name="top_delete_description">Deze foto verwijderen.</string>
    <string name="top_edit_description">Deze foto bewerken.</string>
    <string name="delete">Verwijderen</string>
    <string name="edit">Bewerken</string>
    <string name="share">Delen</string>
    <string name="gallery_available">Bewerkte foto\'s:</string>
    <string name="no_photos_yet">Er zijn nog geen foto\'s in de app.</string>
    <string name="no_edited_photos">Er zijn nog geen bewerkte foto\'s in de app.</string>
    <string name="saving">Aan het opslaan</string>
</resources>