<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_add_sticker"
        android:contentDescription="@string/sticker_icon_description"
        android:icon="@drawable/ic_action_addsticker"
        android:title="@string/sticker"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/main_add_text"
        android:contentDescription="@string/text_icon_description"
        android:icon="@drawable/ic_add_text"
        android:title="@string/text"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/main_add_save"
        android:contentDescription="@string/save_icon_description"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText" />

</menu>