<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_layout_margin"
    app:cardCornerRadius="@dimen/card_dimen_value"
    app:cardElevation="@dimen/card_dimen_value">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/photoRelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img_photo_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgPhoto"
                android:layout_marginTop="@dimen/card_layout_margin"
                android:text="@string/photo_name"
                android:textSize="@dimen/card_text_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnArrowDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/expand_card"
                android:src="@drawable/ic_arrow_down" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/detailRelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photoRelLayout"
            android:visibility="visible">

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateTxt"
                tools:text="filler" />

            <ImageView
                android:id="@+id/btnArrowUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDate"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/collapse_card"
                android:src="@drawable/ic_arrow_up" />

        </RelativeLayout>

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>