<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_main"
            app:title="Home" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_nav_height"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/screen_border_margin"
            android:text="@string/welcome"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDescription"
            android:layout_marginStart="@dimen/screen_border_margin"
            android:text="@string/available"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textNoPhotosHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textGallery"
            android:layout_margin="@dimen/screen_border_margin"
            android:text="@string/no_photos_yet"
            android:textSize="@dimen/default_text_size"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/galleryRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textGallery"
            android:layout_marginStart="@dimen/screen_border_margin"
            android:layout_marginEnd="@dimen/screen_border_margin"
            android:layout_marginBottom="@dimen/screen_border_margin" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/screen_border_margin"
        android:layout_marginBottom="@dimen/fab_bottom_margin"
        android:text="@string/take_photo"
        app:icon="@drawable/ic_baseline_camera_24"
        app:layout_anchor="@id/bottomNav"
        app:layout_anchorGravity="top|end"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        style="@style/Widget.MaterialComponents.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>